tests/baselines/reference/YieldExpression19_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression19_es6.ts(1,9): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
tests/cases/conformance/es6/yieldExpressions/YieldExpression19_es6.ts(3,13): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression19_es6.ts (2 errors) ====
    function*foo() {
            ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
      function bar() {
        function* quux() {
                ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
          yield(foo);
        }
      }
    }